# strava_art

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  circle_coords.py  edges.csv  gen_circle.cpp  gen_manhattan_grid.cpp  ideas.md  matched.txt  matched2.txt  package-lock.json  package.json  run_demo.bat  server.js  strava_art.cpp  tiny_mm.cpp  trace.csv  visualise.cpp
public/: style.css
views/: index.ejs
